# myHealth

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/workflows/: python-app.yml
data/: db.json  secondary_db.json
myhealth/: myHealth.py
tensorflow_model_0/: keras_model.h5  labels.txt
tests/: myhealth_test.py
